2017-10-07  Oliver Kiddle  <opk@zsh.org>

	* 41827: Completion/Zsh/Context/_brace_parameter: correct
	sense of description for ${...:?...} expansion

	* dana: 41826: Completion/Zsh/Context/_brace_parameter: fix
	inaccuracies in completion description wording

	* 41824: Src/Zle/computil.c, Test/Y03arguments.ztst: fix to
	not complete rest args from an _arguments set alongside
	the argument to and option in a separate set

	* 41823: Completion/Unix/Command/_expand,
	Completion/Unix/Command/_mv, Completion/Unix/Command/_numfmt,
	Completion/Unix/Command/_seq, Completion/Unix/Command/_split,
	Completion/Unix/Command/_stdbuf, Completion/Unix/Command/_cp,
	Completion/Unix/Command/_timeout,
	Completion/Unix/Command/_unexpand: new completions for some
	GNU coreutils utilities

2017-10-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Doc/Zsh/mod_stat.yo: zsh/stat docs: Rephrase to
	avoid ambiguity due to the ambiguous relative precedence of the
	'other than' and 'and' operators.

2017-10-04  Noah Pendleton  <noah.pendleton@gmail.com>

	* 41808: Completion/Unix/Command/_git: _git-cherry-pick:
	Typo fixes

2017-10-04  Peter Stephenson  <p.stephenson@samsung.com>

	* 41802 (minor tweaks): Src/exec.c, Src/parse.c: use heap
	instead of stack for temporary storage over shell function call,
	also fix debug message when FUNCNEST increased.

2017-10-02  Peter Stephenson  <p.stephenson@samsung.com>

	* 41787 (minor corrections): configure.ac, README,
	Doc/Zsh/params.yo, Src/exec.c, Src/parms.c,
	Test/C04funcdef.ztst: reduce default nested function depth to
	500 and expose as $FUNCNEST.

2017-10-01  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 41797 (tweaked): Doc/Zsh/builtins.yo, Src/builtin.c,
	Src/params.c, Src/subst.c, Src/zsh.h, Test/B02typeset.ztst:
	typeset -p1 outputs arrays and associative arrays with newlines
	and indented elements.

2017-09-29  Peter Stephenson  <p.stephenson@samsung.com>

	* 41789: Src/exec.c: Don't try to mark an FD as saved if it