@@ -1,3 +1,10 @@
+2017-10-08  Barton E. Schaefer  <schaefer@zsh.org>
+
+	* 41830: Test/E01options.ztst: test for 41828.
+
+	* 41828: Src/subst.c: skip SHFILEEXPANSION for new nodes added
+	by stringsubst() in prefork().
+
 2017-10-07  Oliver Kiddle  <opk@zsh.org>
 
 	* 41827: Completion/Zsh/Context/_brace_parameter: correct
